# mmap

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/aisaka/mmapdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MMAPOperate.cpp  com_aisaka_mmapdemo_MMAPOperate.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/aisaka/mmapdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
